welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:21: error: ';' expected but 'else' found.
else return 0	
^